@@ -360,23 +360,35 @@ by Pohlig-Hellman algorithm. Return \kbd{cgetg(1, t\_VEC)} if there are no
 solutions. This calls \tet{gen_plog} repeatedly for all prime divisors $p$ of
 $N$.
 
-\fun{GEN}{gen_order}{GEN x, GEN N, void *E, const struct bb_group *grp}
-computes the order of $x$. If $N$ is not \kbd{NULL} it is a multiple of the
-order, as a \typ{INT} or a factorization matrix.
+In the following functions the integer parameter \kbd{ord} can be given
+in all the formats recognized for the argument of arithmetic functions,
+i.e.~either as a positive \typ{INT} $N$, or as its factorization matrix
+$\var{faN}$, or (preferred) as a pair $[N,\var{faN}]$.
 
-\fun{GEN}{gen_factored_order}{GEN x, GEN N, void *E, const struct bb_group *grp}
-returns a pair $[o,F]$, where $o$ is the order of $x$ and $F$ is the
-factorization of $o$. If $N$ is not \kbd{NULL} it is a multiple of the order,
-as a \typ{INT} or a factorization matrix.
+\fun{GEN}{gen_order}{GEN x, GEN ord, void *E, const struct bb_group *grp}
+computes the order of $x$; \kbd{ord} is a multiple of the order, for instance
+the group order.
 
-\fun{GEN}{gen_select_order}{GEN v, GEN N, void *E, const struct bb_group *grp}
+\fun{GEN}{gen_factored_order}{GEN x, GEN ord, void *E, const struct bb_group
+*grp} returns a pair $[o,F]$, where $o$ is the order of $x$ and $F$ is the
+factorization of $o$; \kbd{ord} is as in \tet{gen_order}.
+
+\fun{GEN}{gen_gener}{GEN ord, void *E, const struct bb_group *grp}
+returns a random generator of the group, assuming it is of order exactly
+\kbd{ord}.
+
+\fun{GEN}{get_arith_Z}{GEN ord} given \kbd{ord} as above in one of the
+formats recognized for arithmetic functions, i.e. a positive
+\typ{INT} $N$, its factorization \var{faN}, or the pair $[N, \var{faN}]$,
+return $N$.
+
+\fun{GEN}{get_arith_ZZM}{GEN ord} given \kbd{ord} as above,
+return the pair $[N, \var{faN}]$. This may require factoring $N$.
+
+\fun{GEN}{gen_select_order}{GEN v, void *E, const struct bb_group *grp}
 Let $v$ be a vector of possible orders for the group; try to find the true
 order by checking orders of random points. This will not terminate if there
 is an ambiguity.
-
-\fun{GEN}{gen_gener}{GEN o, void *E, const struct bb_group *grp}
-returns a random generator of the group, assuming it is of order exactly
-$o$ (which can be given by a factorization matrix).
 
 \subsec{Black box groups with pairing}
 
