@@ -13,6 +13,7 @@ Done for version 2.8.1 (released ??/??/2016):
     4- extend ellissupersingular for E/nf
     5- added a tag Obsolete: to the RFC822 description system (pari.desc)
     6- new GP functions nfmodpr, nfmodprlift
+    7- [libpari] get_arith_Z, get_arith_ZZM
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
